<resources>
    <string name="app_name">Co点菜系统</string>
    <string name="action_settings">Settings</string>
    <string name="right_menu">已点菜式</string>
    <string name="prices">总价:</string>
    <string name="place_an_order">下单</string>
    <string name="add">加饭</string>
    <string name="add_water">加水</string>
    <string name="cui">催单</string>
    <string name="mai">结账</string>
    <string name="dish">菜名</string>
    <string name="price">价钱</string>
    <string name="hint">菜品提供以下选择:</string>
    <string name="remark">(备注)</string>
    <string name="We_chat">微信付款扫码</string>
    <string name="pli_pay">支付宝付款扫码</string>
    <string name="paythebill_hint">请等待服务员到来后再扫码结账，感谢您的配合和理解，欢迎下次光临！</string>
    <string name="pay_title">付款方式</string>


</resources>
