<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.menusystem.activity.MainActivity">


    <LinearLayout
        android:id="@+id/left_top_twodiment"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="3dp"
        android:layout_weight="78"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:background="@drawable/left_menu_top"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/zhuohao"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|right"
                android:text="桌号 : "
                android:layout_margin="2dp"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/table_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/zhuohao"
                android:layout_weight="1"
                android:gravity="center|left"
                android:layout_margin="2dp"
                android:text="0000"
                android:textColor="@color/black"
                android:textSize="15sp" />


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <ListView
            android:id="@+id/leftmenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/left_menu">

        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/MainRl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="25"
        android:background="@color/transparent"
        android:orientation="vertical"></LinearLayout>


    <LinearLayout
        android:id="@+id/right"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="68"
        android:background="@drawable/right_menu"
        android:orientation="vertical">

        <TextView
            android:id="@+id/selected_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/right_menu"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/fenge123"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="1dp"
            android:background="@color/black" />

        <LinearLayout
            android:id="@+id/table_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fenge123"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="菜名"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="单价"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="数量"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </LinearLayout>
        <TextView
            android:id="@+id/fenge1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="1dp"
            android:background="@color/black" />

        <com.menusystem.view.SliderListView
            android:id="@+id/right_listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50">

        </com.menusystem.view.SliderListView>


        <TextView
            android:id="@+id/fenge"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="1dp"
            android:background="@color/black" />

        <LinearLayout
            android:id="@+id/right_bottom_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/prices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left|center"
                    android:layout_margin="4dp"
                    android:text="@string/prices"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/all_prices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:paddingLeft="5dp"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="15sp"

                    />

            </LinearLayout>


            <Button
                android:id="@+id/xiadan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/button_selector"
                android:text="@string/place_an_order"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/mai"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="13dp"
                    android:layout_marginRight="13dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/button_selector"
                    android:text="@string/mai"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="3dp"
                    >

                    <Button
                        android:id="@+id/add_water"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/button_selector"
                        android:text="@string/add_water"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/cui"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginLeft="5dp"
                        android:background="@drawable/button_selector"
                        android:text="@string/cui"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


</LinearLayout>
